--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- header section starts -->
     <header class="header" data-aos="fade-down">
         <section class="flex">
-            <a href="home.html" class="logo">Tripify</a>
+            <a href="index.html" class="logo">Tripify</a>
             <nav class="navbar">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="tours.html">Tours</a>
                 <a href="destination.html">Destination</a>
