--- a/destinations.html
+++ b/destinations.html
@@ -17,7 +17,7 @@
         <section class="flex">
             <a href="home.html" class="logo">Tripify</a>
             <nav class="navbar">
-              <a href="home.html">home</a>
+              <a href="index.html">home</a>
               <a href="about.html">about</a>
               <a href="tours.html">tours</a>
               <a href="destinations.html">destinations</a>
