--- a/tours.html
+++ b/tours.html
@@ -17,7 +17,7 @@
         <section class="flex">
            <a href="home.html" class="logo">Tripify</a>
            <nav class="navbar">
-             <a href="home.html">Home</a>
+             <a href="index.html">Home</a>
              <a href="about.html">About</a>
              <a href="tours.html">Tours</a>
              <a href="destinations.html">Destinations</a>
